<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="saved_trips_screen_title">Saved Trips</string>
    <string name="from_text_field_placeholder">From Station</string>
    <string name="to_text_field_placeholder">To Station</string>
    <string name="time_table_screen_title">Time Table</string>
    <plurals name="stops">
        <item quantity="one">%d stop</item>
        <item quantity="other">%d stops</item>
    </plurals>
    <plurals name="alerts">
        <item quantity="one">%d Alert</item>
        <item quantity="other">%d Alerts</item>
    </plurals>
</resources>
