...
                    dimensions = ButtonDefaults.extraSmallButtonSize(),
                    modifier = Modifier.padding(
                        start = dim.spacingL + dim.iconM.toAdaptiveSize(),
                        bottom = dim.spacingM,
                    ),
                ) {
                    Text(text = "Read More")
                }
            }
        }
    }
}

...
