...
        contentPadding = PaddingValues(vertical = dim.spacingXL),
        modifier = modifier.background(color = KrailTheme.colors.bottomSheetBackground),
    ) {
        item("title_bar") {
            SheetTitleBar(
                title = {
                    Text(text = "Plan your trip")
                },
                actions = {
                    TextButton(
                        onClick = {
                            val now: LocalDateTime = Clock.System.now()
                                .toLocalDateTime(TimeZone.currentSystemDefault())
...
                },
                dimensions = ButtonDefaults.largeButtonSize(),
                modifier = Modifier.padding(horizontal = dim.spacingXXXL, vertical = dim.spacingXL),
            ) {
                Text(
                    text = if (reset) {
                        "Leave Now"
                    } else {
                        DateTimeSelectionItem(
                            option = journeyTimeOption,
                            hour = timePickerState.hour,
                            minute = timePickerState.minute,
                            date = selectedDate,
...
