...
    val dim = KrailTheme.dimensions
    Column(
        modifier = modifier.fillMaxWidth().padding(top = dim.spacingXL),
        verticalArrangement = Arrangement.spacedBy(dim.spacingL),
    ) {
        Text(
            text = "Select Date",
            style = KrailTheme.typography.title,
            color = KrailTheme.colors.onSurface,
        )

        Row(
            modifier = Modifier.fillMaxWidth(),
...
