appId: xyz.ksharma.krail
---
- launchApp:
    clearState: false
- waitForAnimationToEnd
- tapOn: "Krail App"
- waitForAnimationToEnd
- tapOn:
    point: "20%,12%"
- waitForAnimationToEnd
- assertVisible: "333"
- tapOn: "333"
- waitForAnimationToEnd
- assertVisible: "15 stops"
- takeScreenshot: store-listing/krail/screenshots/ipad13/02_live_times
