appId: xyz.ksharma.krail
---
- launchApp:
    clearState: false
- waitForAnimationToEnd
- tapOn: "Krail App"
- waitForAnimationToEnd
- tapOn: "Tallawong Station"
- waitForAnimationToEnd
- assertVisible: "Tallawong P1"
- assertVisible: "Tallawong P3"
- takeScreenshot: store-listing/krail/screenshots/ipad13/03_parking_tallawong
