appId: xyz.ksharma.krail
---
- launchApp:
    clearState: false
- waitForAnimationToEnd
- tapOn: "Krail App"
- waitForAnimationToEnd
- tapOn:
    point: "50%,20%"
- waitForAnimationToEnd
- assertVisible: "Delayed"
- tapOn: "333"
- waitForAnimationToEnd
- assertVisible: "15 stops"
- assertVisible: "Delayed"
- takeScreenshot: store-listing/krail/screenshots/iphone65/05_live_delays
