appId: xyz.ksharma.krail
---
- launchApp:
    clearState: false
- waitForAnimationToEnd
- tapOn: "Krail App"
- waitForAnimationToEnd
- tapOn:
    point: "20%,12%"
- waitForAnimationToEnd
- assertVisible: "333"
- tapOn: "Plan your trip"
- waitForAnimationToEnd
- assertVisible: "Select Date"
- swipe:
    start: "26%,52%"
    end: "26%,12%"
    duration: 500
- waitForAnimationToEnd
- assertVisible: "Leave Now"
- takeScreenshot: store-listing/krail/screenshots/ipad13/06_plan_trip_sheet
